contact.component.html: Fix email overlay on mobile

--- a/src/assets/scss/partials/_contact.scss
+++ b/src/assets/scss/partials/_contact.scss
@@ -2,33 +2,33 @@
 /* CONTACT ELEMENTS */
 
 .email-padding {
-  padding-top: 30px;
+    padding-top: 30px;
 }
 
 .email-padding-med {
-  padding-top: 50px;
+    padding-top: 50px;
 }
 
 .icon-spacing {
-  position: relative;
-  padding-left: 40px;
-  padding-right: 40px;
+    position: relative;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .divider-blue {
-  background-color: $dark-text-color
+    background-color: $dark-text-color;
 }
 
 .email-padding-end {
-  padding-top: 40vh;
+    padding-top: 40vh;
 }
 
 .email-padding-mobile {
-  padding-top: 90vh;
+    padding-top: 90vh;
 }
 
 .email-text {
-  padding-top: 60px;
+    padding-top: 50px;
 }
 
 /* ------------------------------------------------------------------------------------------------------------------ */
